fix overlapping title

--- a/css/style.css
+++ b/css/style.css
@@ -591,7 +591,7 @@ body:after {
     height: calc(20vh); }
   @media (max-width: 991.98px) {
     .site-blocks-cover .intro-text {
-      margin-top: 30%; } }
+      visibility: hidden; } }
   .site-blocks-cover h1 {
     font-size: 3rem;
     color: #fff;
